--- a/client/src/stylesheets/FeedbackPage.css
+++ b/client/src/stylesheets/FeedbackPage.css
@@ -9,6 +9,11 @@
   /* justify-content: space-evenly; */
 }
 
+.ant-modal-body {
+  background: #e9f4fb;
+  border-radius: 5px;
+}
+
 h3 {
   color: #0489c5;
 }
@@ -29,16 +34,56 @@ h3 {
   color: lightgray;
 }
 
+.feedbackModalSurround {
+  display: flex;
+  flex-direction: row;
+  margin: 5vh 0vw 5vh 1vw;
+}
+.feedbackModalLeft {
+  background: white;
+  width: 65%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  height: 60vh;
+  border-radius: 28px;
+}
+
+.feedbackScroll {
+  position: relative;
+  width: 90%;
+  height: 90%;
+  overflow-y:scroll;
+  top: 7%;
+  left: 6%;
+}
+
+.modalRightRect {
+  background: white;
+  width: 20vw;
+  height: 10vh;
+  margin: 3vh 0vw 0vh 3vw;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 28px;
+}
+
+.modalRightText {
+  position: relative;
+  top: 17%;
+  right: 10%;
+}
+
+
 .ratingContainer {
   min-width: 30%;
   border-radius: 25px;
   background-color: white;
-  padding: 30px;
+  padding: 10px 30px 10px 30px;
   display: flex;
   flex-direction: column;
   position: relative;
   /*left: 100px; */
-  top: 100px;
+  align-self: flex-start;
+  left: 8vw;
+  top: 75px;
   justify-content: space-between;
   margin-top: 25px;
 }
@@ -91,8 +136,19 @@ h3 {
 .feedbackButtons {
   display: flex;
   flex-direction: row;
-  margin-top: 130px;
+  margin-top: 100px;
   position: relative;
+  align-self: flex-start;
+  left: 7.2vw;
+}
+
+#lessonTitle {
+  position: relative;
+  top: 100px;
+  align-self: flex-start;
+  left: 8vw;
+  color: #0489c5;
+
 }
 
 .summaryButton {
@@ -109,6 +165,14 @@ h3 {
   margin-top: 25px;
 }
 
+.feedbackTextarea {
+  border-color: #d2edfc;
+  width: 100%;
+  padding: 10px 10px;
+  min-height: 13vh;
+  border-radius: 4px;
+}
+
 .summaryButton:hover {
   cursor: pointer;
 }
@@ -118,83 +182,42 @@ h3 {
   font-weight: bold;
   background-color: #03A9F4;
   border-color: transparent;
-  border-radius: 2vw;
+  border-radius: 15px;
   display: flex;
   position: relative;
-  padding: 0.65vw 0.65vw 0.65vw 0.65vw;
-  margin-left: 40px;
+  padding: 0.75vw 3vw 0.75vw 3vw;
+    margin-left: 10px;
 }
 
 .submitButton:hover {
   cursor: pointer;
 }
-/* 
-.lessonPageContainer {
-  width: 85%;
-  position: relative;
-  left: 100px;
-  top: 100px;
+
+.feedbackScroll::-webkit-scrollbar {
+  width: 0.60em;
 }
 
-.title-container {
+.feedbackScroll ::-webkit-scrollbar-button {
+  max-height: 10px;
+}
+ 
+.feedbackScroll::-webkit-scrollbar-thumb {
+  background-color: #E5E5E5;
+  border-radius: 5px;
+}
+
+h2 {
+  color: #0489C5;
+  font-size: 1.80em;
+}
+
+#homeButton {
+  background: #039AF4; 
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
-h1,
-.title {
-  height: 100px;
-}
-
-.title {
-  font-family: Lato, sans-serif;
-  font-weight: bold;
-  font-size: 50px;
-  color: #2e64bc;
-  margin-bottom: 0;
-}
-
-.editButton {
-  background-color: inherit;
-  border: none;
-  margin: 10px;
-  height: 12px;
-  object-fit: none;
-}
-
-.editButton:hover {
+#homeButton:hover {
   cursor: pointer;
 }
-
-.textTitle {
-  font-family: Lato, sans-serif;
-  color: #2e64bc;
-  font-size: 30px;
-}
-
-.textBox {
-  min-height: 45px;
-  width: 90%;
-  padding: 10px;
-  margin-bottom: 20px;
-  font-size: 16px;
-}
-
-.editing {
-  background-color: #ffffff;
-  box-shadow: 3px 3px 3px #e5e5e5;
-}
-
-.saveButton {
-  font-family: Lato, sans-serif;
-  background-color: #2e64bc;
-  color: #ffffff;
-  margin-top: 30px;
-  position: relative;
-  left: 85%;
-  font-size: 22px;
-}
-
-.saveButton:hover {
-  cursor: pointer;
-} */
